feat: truncate too long filename

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <input type="text" name="page-number" id="page-number"
             class="w-14 p-3 text-center bg-white border-1 border-solid border-[var(--primary)] rounded-r-[3px] text-5 text-[var(--primary)] font-bold focus:outline-none placeholder-gray-300">
         </div>
-        <p class="filename h-4.5 text-4.5 text-center text-[var(--primary)] m-0">
+        <p class="w-80 truncate filename h-4.5 text-4.5 text-center text-[var(--primary)] m-0">
           <span class="text-5 text-gray-400">no file selected</span>
         </p>
       </div>
